# rust-clap-first-example

./: Cargo.toml  README.md
clap-wrapper-extensions/: Cargo.toml  README.md
clap-wrapper-extensions/src/: auv2.rs  lib.rs
plugins/gain-example/: Cargo.toml
plugins/gain-example/src/: audio_thread.rs  lib.rs  main_thread.rs
plugins/gain-example/src/ext/: auv2.rs  mod.rs  vst3.rs
plugins/web-ui-example/: Cargo.toml  README.md
plugins/web-ui-example/src/: audio_thread.rs  directories.rs  lib.rs  main_thread.rs
plugins/web-ui-example/src/gui/: dpi.rs  index.html  mod.rs
xtask/: Cargo.toml  README.md
xtask/cmake/: CMakeLists.txt  clap_entry.cpp
xtask/src/: main.rs
