[package]
name = "gain-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# only a static library is built for this clap-wrapper based approach.
# the dylib will be generated on the fly by the CMake script.
crate-type = ["staticlib"]

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git", rev = "5deaa1b" }

# add any additional extensions that you need
# (params, state, gui, note-ports, ...)
# by enabling the respective features on clack-extensions
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "5deaa1b", features = ["audio-ports", "clack-plugin"] }

# The following are needed for the VST3 clap-wrapper support -
# once that is added to clack, these dependency can go
clack-common = { git = "https://github.com/prokopyl/clack.git", rev = "5deaa1b" }

# This is the version used by the clack version we're using.
# Must be compatible to compile correctly.
clap-sys = "0.4.0"
