[package]
name = "gain-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# only a static library is built for this clap-wrapper based approach.
# the dylib will be generated on the fly by the CMake script.
crate-type = ["staticlib"]

[dependencies]
clack-plugin = { git = "https://github.com/prokopyl/clack.git", rev = "5deaa1b" }

# add any additional extensions that you need
# (params, state, gui, note-ports, ...)
# by enabling the respective features on clack-extensions
clack-extensions = { git = "https://github.com/prokopyl/clack.git", rev = "5deaa1b", features = ["audio-ports", "clack-plugin"] }

# This will hopefully be included in clack soon!
clap-wrapper-extensions = { path = "../../clap-wrapper-extensions" }